--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
   "presets": [ 
     [
-      "@babel/env",
-      {
-        "targets": "> 0.25%, not dead, not ie 11"
-      }
+      "@babel/env"
+      // {
+      //   "targets": "> 0.25%, not dead, not ie > 0"
+      // }
     ]
   ],
   "plugins": [ "@babel/plugin-transform-runtime"]
